[package]
name = "twilight-dispatch"
version = "0.3.4"
authors = ["CHamburr <hi@chamburr.xyz>"]
edition = "2018"

[dependencies]
bathbot-cache = { git = "https://github.com/MaxOhn/bathbot-cache", branch = "sticker_patch" }
dotenv = { version = "0.15", default-features = false }
flate2 = { version = "1.0", default-features = false, features = ["zlib"] } # required for twilight-gateway
futures-util = { version = "0.3", default-features = false }
hashbrown = { version = "0.11", default-features = false, features = ["ahash", "inline-more", "serde"] }
hyper = { version = "0.14", default-features = false, features = ["server", "tcp", "http1"] }
lapin = { version = "1.6", default-features = false }
lazy_static = { version = "1.4", default-features = false }
prometheus = { version = "0.13", default-features = false, features = ["process"] }
serde = { version = "1.0", default-features = false }
serde_json = { version = "1.0", default-features = false }
serde_repr = { version = "0.1", default-features = false }
time = { version = "0.3", default-features = false, features = ["formatting", "parsing", "std"] }
tokio = { version = "1.2", default-features = false, features = ["rt-multi-thread", "macros", "signal", "time"] }
tracing = { version = "0.1", default-features = false }
tracing-subscriber = { version = "0.2", default-features = false, features = ["ansi", "fmt"] }
# twilight-gateway = { version = "0.6", default-features = false, features = ["compression", "rustls-webpki-roots"] }
twilight-gateway = { git = "https://github.com/MaxOhn/twilight", branch = "sticker_patch", default-features = false, features = ["compression", "rustls-webpki-roots"] }
# twilight-model = { version = "0.6", default-features = false }
twilight-model = { git = "https://github.com/MaxOhn/twilight", branch = "sticker_patch", default-features = false }

[patch.crates-io]
hyper-rustls = { git = "https://github.com/ctz/hyper-rustls" }

[profile.release]
codegen-units = 1
debug = false
incremental = false
lto = true
opt-level = 3
panic = "abort"
